# AtomEngine

./: CMakeLists.txt  LICENCE  README.md
include/core/: Atom2D.hpp  BaseAtom.hpp  Sprite2D.hpp  Window.hpp
include/graphics/: Image.hpp
include/math/: Vector2D.h
src/: ejem.cpp  main.cpp
src/core/: Atom2D.cpp  Sprite2D.cpp  Window.cpp
src/graphics/: Image.cpp
src/math/: Vector2D.cpp
